src/cli/snapshots/parari__cli__split_view__tests__snapshot_tests__render_split_view_log_mode.snap
---
source: src/cli/split_view.rs
expression: terminal.backend()
---
"+> Models ---------------------++ Log -------------------------------------------------------------+"
"|> [bot] claude [+] (2 files)     ||[bot] CLAUDE - Success                                               |" Hidden by multi-width symbols: [(4, " "), (34, " ")]
"|  * gemini [+] (3 files)     ||==================================================                |" Hidden by multi-width symbols: [(4, " ")]
"|  [pkg] codex [x] (0 files)      ||                                                                  |" Hidden by multi-width symbols: [(4, " ")]
"|                              ||Summary:                                                          |"
"|                              ||  Files changed: 2                                                |"
"|                              ||  + 1 added                                                       |"
"|                              ||  ~ 1 modified                                                    |"
"|                              ||                                                                  |"
"|                              ||--------------------------------------------------                |"
"|                              ||Output:                                                           |"
"|                              ||--------------------------------------------------                |"
"|                              ||Analyzing the code...                                             |"
"|                              ||Made changes to src/main.rs                                       |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"+------------------------------++------------------------------------------------------------------+"
" j/k  Select   Tab/l  Details   L  Log   D  Diff   a/Enter  Apply   q  Quit                         "
