src/cli/snapshots/parari__cli__split_view__tests__snapshot_tests__render_split_view_second_model_selected.snap
---
source: src/cli/split_view.rs
expression: terminal.backend()
---
"+> Models ---------------------++ Log -------------------------------------------------------------+"
"|  [bot] claude [+] (2 files)     ||* GEMINI - Success                                               |" Hidden by multi-width symbols: [(4, " "), (34, " ")]
"|> * gemini [+] (3 files)     ||==================================================                |" Hidden by multi-width symbols: [(4, " ")]
"|  [pkg] codex [x] (0 files)      ||                                                                  |" Hidden by multi-width symbols: [(4, " ")]
"|                              ||Summary:                                                          |"
"|                              ||  Files changed: 3                                                |"
"|                              ||  + 2 added                                                       |"
"|                              ||  ~ 1 modified                                                    |"
"|                              ||                                                                  |"
"|                              ||--------------------------------------------------                |"
"|                              ||Output:                                                           |"
"|                              ||--------------------------------------------------                |"
"|                              ||Processing request...                                             |"
"|                              ||Updated 3 files                                                   |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"|                              ||                                                                  |"
"+------------------------------++------------------------------------------------------------------+"
" j/k  Select   Tab/l  Details   L  Log   D  Diff   a/Enter  Apply   q  Quit                         "
